objects/CRMforNonProfit__NNOSettingsCSAS__c.object
<CustomObject>
    <fields>
        <fullName>CRMforNonProfit__CSAS_Account_Number__c</fullName>
        <description>ČSAS číslo účtu pro načítání výpisů přes Databanking 24</description>
        <label>ČSAS Číslo účtu</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__CSAS_Cislo_posl_nactene_stranky_vypisu__c</fullName>
        <description>Číslo poslední načtené stránky (á 100 transakcí) výpisu z banky. Prázdná hodnota značí, že byly zpracovány všechny stránky.</description>
        <label>ČSAS Číslo posl. načtené stránky výpisu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__CSAS_Datum_Posledniho_Vypisu__c</fullName>
        <description>ČSAS Datum posledního načtení výpisu přes Databanking 24</description>
        <label>ČSAS Datum posledního načteného výpisu</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__CSAS_Password__c</fullName>
        <description>Heslo pro přístup k ČSAS Databanking 24</description>
        <label>ČSAS Heslo</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__CSAS_UserName__c</fullName>
        <description>ČSAS Číslo klienta pro přístup k Databanking 24</description>
        <label>ČSAS Číslo klienta</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__CSAS_WS__c</fullName>
        <description>URL služby ČSAS Databanking 24</description>
        <label>ČSAS WS</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__NNOSettings__c</fullName>
        <label>NNOSettings</label>
        <referenceTo>CRMforNonProfit__NNOSettings__c</referenceTo>
        <relationshipLabel>NNOSettingsCSAS</relationshipLabel>
        <relationshipName>NNOSettingsCSAS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>NNOSettingsCSAS</label>
    <listViews>
        <fullName>CRMforNonProfit__All</fullName>
        <columns>NAME</columns>
        <columns>CRMforNonProfit__CSAS_Account_Number__c</columns>
        <columns>CRMforNonProfit__CSAS_UserName__c</columns>
        <columns>CRMforNonProfit__CSAS_Cislo_posl_nactene_stranky_vypisu__c</columns>
        <columns>CRMforNonProfit__CSAS_Datum_Posledniho_Vypisu__c</columns>
        <columns>CRMforNonProfit__CSAS_Password__c</columns>
        <columns>CRMforNonProfit__CSAS_WS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Popis</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NNOSettingsCSAS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>